[gd_scene load_steps=14 format=2]

[ext_resource path="res://credits button_pressed.png" type="Texture" id=1]
[ext_resource path="res://quit button_pressed.png" type="Texture" id=2]
[ext_resource path="res://main menu 2.png" type="Texture" id=3]
[ext_resource path="res://credits button.png" type="Texture" id=4]
[ext_resource path="res://start button.png" type="Texture" id=5]
[ext_resource path="res://quit button.png" type="Texture" id=6]
[ext_resource path="res://start button_pressed.png" type="Texture" id=7]
[ext_resource path="res://Menu utama.gd" type="Script" id=8]
[ext_resource path="res://quit button_toggle.png" type="Texture" id=9]
[ext_resource path="res://start button_toggle.png" type="Texture" id=10]
[ext_resource path="res://credits button_toggle.png" type="Texture" id=11]
[ext_resource path="res://music coba.tscn" type="PackedScene" id=12]
[ext_resource path="res://main menu.mp3" type="AudioStream" id=13]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="AudioStreamPlayer" parent="." instance=ExtResource( 12 )]
stream = ExtResource( 13 )
autoplay = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
margin_left = -1.0
margin_top = 1.0
margin_right = 319.0
margin_bottom = 181.0
texture = ExtResource( 3 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -79.0
margin_top = -41.0
margin_right = 79.0

[node name="Start" type="TextureButton" parent="CanvasLayer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 41.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 10 )

[node name="Credits" type="TextureButton" parent="CanvasLayer/HBoxContainer"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 41.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 11 )

[node name="Quit" type="TextureButton" parent="CanvasLayer/HBoxContainer"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 41.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 9 )

[connection signal="pressed" from="CanvasLayer/HBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
